refactor and bugfixing

--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -130,7 +130,7 @@
             <div>
               <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
               <p>E-Mail: <i data-from="student-email"></i></p>
-              <p>Passwort: <i>********</i></p>
+              <p>Passwort: <i class="student-password">********</i></p>
             </div>
              <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
               <i class="fa fa-print"></i> Drucken
@@ -157,7 +157,7 @@
           <div>
             <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
             <p>E-Mail: <i data-from="student-email"></i></p>
-            <p>Passwort: <i>********</i></p>
+            <p>Passwort: <i class="student-password">********</i></p>
           </div>
             <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
             <i class="fa fa-print"></i> Drucken
