--- a/views/administration/dataprivacy/registration-student.hbs
+++ b/views/administration/dataprivacy/registration-student.hbs
@@ -28,12 +28,12 @@
 
         <div class="form-group">
           <label>Geburtsdatum: *</label>
-          <input class="form-control linked" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="student-birthdate" type="text" data-from="student-birthdate" required disabled/>
+          <input class="form-control linked" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="student-birthdate" type="text" data-from="student-birthdate" required autocomplete="off" />
         </div>
 
         <div class="form-group">
             <label>E-Mail Adresse: *</label>
-            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required></input>
+            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required>
         </div>
         <p>
             Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
@@ -58,10 +58,7 @@
         <h4>Einwilligungserklärung</h4>
         <p>Die HPI Schul-Cloud bietet digitale Bildung für alle – fair, nicht profitorientiert und datenschutzkonform. Der Schutz von Schüler*Innen-Daten ist zentraler Bestandteil der Schul-Cloud.</p>
         <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die Schul-Cloud nutzen kannst.</p>
-        <p>Ich,
-          <b data-from="student-firstname"></b>
-          <b data-from="student-secondname"></b> 
-        erkläre folgendes:</p>
+        <p>Ich, <b data-from="student-firstname"></b> <b data-from="student-secondname"></b>, erkläre folgendes:</p>
         <label>
             <input name="Erhebung" type="checkbox" value="true" required/>
             <span>Ich habe die <a href="#">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
@@ -109,15 +106,15 @@
             <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
             Login-Daten per E-Mail an angegebene Adressen senden
         </label>
-        <p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler*innen ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
+        <p>Beim ersten Login muss ein neues Passwort gewählt werden.</p>
       </section>
 
 
       <section data-panel="section-4">
         <h4>Dankeschön</h4>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil, sunt ut officiis deleniti molestias eos id quod recusandae laborum a nam ratione veniam, totam repellendus saepe, iure iusto! Doloremque, molestias!</p>
+        <p>Vielen Dank für die Registrierung in der Schul-Cloud!</p>
 
-        <p>Ihr Kind kann sich nun in der Schul-Cloud einloggen.</p>
+        <p>Du kannst Dich jetzt einloggen:</p>
 
         <div class="print">
           <div>
