--- a/views/administration/dataprivacy/registration.hbs
+++ b/views/administration/dataprivacy/registration.hbs
@@ -28,7 +28,7 @@
             <p><strong>Achtung:</strong> Die folgende Anmeldung muss von dir als Schüler selbst vorgenommen werden, nicht von deinen Eltern.</p>
         </div>
       <button id="showRegistrationForm" class="btn btn-primary">Weiter</button>
-        <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. 🏳️‍🌈🎉🦄</p>
+        <p><br><br>* Sprachlicher Hinweis: Für bessere Lesbarkeit verwenden wir die männliche Form. Es sind stets alle Personen unabhängig vom Geschlecht gemeint. Die Schul-Cloud ist für alle Menschen da, unabhängig von Herkunft, Einschränkungen, Geschlecht und sexueller Orientierung. ‍🌈🎉🦄</p>
     </div>
   {{/content}}
 {{/extend}}
