--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -85,14 +85,14 @@
       <section data-panel="section-3">
         <h4>Einwilligung</h4>
         <p>Einwilligungserklärung</p>
-        <p> Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der Schul-Cloud nutzen kann:</p>
+        <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der Schul-Cloud nutzen kann:</p>
         <p>Ich, 
           <b data-from="parent-firstname"></b>
           <b data-from="parent-secondname"></b>
         , bin erziehungsberechtigt für 
           <b data-from="student-firstname"></b>
           <b data-from="student-secondname"></b> 
-        und erkläre folgendes:</p>
+        und erkläre Folgendes:</p>
         <label>
             <input name="Erhebung" type="checkbox" value="true" required/>
             <span>Ich habe die <a href="#">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
@@ -110,7 +110,7 @@
             <span> Ich habe die <a href="#">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
         </label>
 
-        <p>Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud. </p>
+        <p>Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud. </p>
         <label>
             <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
             <span>Ich habe die <a href="#">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
@@ -151,10 +151,10 @@ Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren
 
 
 
-Vielen Dank für die Registrierung in der Schul-Cloud
       <section data-panel="section-5">
         <h4>Dankeschön</h4>
-        <p>Vielen Dank für die Registrierung in der Schul-Cloud</p>
+        <p>Vielen Dank für die Registrierung in der Schul-Cloud.</p>
+
         <p>Ihr Kind kann sich nun einloggen:</p>
 
         <a class="btn btn-primary" href="//schul-cloud.org/login">Login öffnen</a>
