--- a/views/administration/dataprivacy/registration-student.hbs
+++ b/views/administration/dataprivacy/registration-student.hbs
@@ -42,10 +42,10 @@
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <Label>Geschlecht: *</Label>
             <select class="form-control form-control-lg" type="text" name="gender">
-              <option value="">Geschlecht auswählen</option>
-              <option value="male">Männlich</option>
-              <option value="female">Weiblich</option>
-              <option value="other">Anderes</option>
+              <option value="">Bitte Geschlecht auswählen</option>
+              <option value="male">männlich</option>
+              <option value="female">weiblich</option>
+              <option value="other">anderes</option>
               <option value="other">keine Angabe</option>
             </select>
           </div>
@@ -58,7 +58,7 @@
         <h4>Einwilligungserklärung</h4>
         <p>Die HPI Schul-Cloud bietet digitale Bildung für alle – fair, nicht profitorientiert und datenschutzkonform. Der Schutz von Schüler*Innen-Daten ist zentraler Bestandteil der Schul-Cloud.</p>
         <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die Schul-Cloud nutzen kannst.</p>
-        <p>Ich, <b data-from="student-firstname"></b> <b data-from="student-secondname"></b>, erkläre folgendes:</p>
+        <p>Ich, <b data-from="student-firstname"></b> <b data-from="student-secondname"></b>, erkläre Folgendes:</p>
         <label>
             <input name="Erhebung" type="checkbox" value="true" required/>
             <span>Ich habe die <a href="#">Datenschutzerklärung</a> gelesen und willige in die Verarbeitung der Nutzerdaten ein.</span>
@@ -76,7 +76,7 @@
             <span> Ich habe die <a href="#">Informationen zu Inhalte-Anbietern</a> gelesen und willige in die Weitergabe der Pseudonyme an Inhalte-Anbieter ein</span>
         </label>
 
-        <p>Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud. </p>
+        <p>Nutzernamen werden nicht an integrierte Drittanbieter weitergegeben. Sollte eine Wiedererkennung nötig sein, z.B. für individuelle Aufgabenstellungen, geschieht dies zu Ihrem Schutz auf Basis eines Pseudonyms. Die Schülerdaten bleiben sicher im Kernbereich der Schul-Cloud. </p>
         <label>
             <input name="Nutzungsbedingungen" type="checkbox" value="Nutzungsbedingungen" required/>
             <span>Ich habe die <a href="#">Nutzungsbedingungen</a> gelesen und stimme ihnen zu.</span>
