first prototyp of class creation (working but not finished)

--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -127,7 +127,7 @@
           <b data-from="student-secondname"></b> 
         in der Schul-Cloud anmelden. Bitte bewahren Sie die Anmeldedaten auf.
           <div class="print">
-            <div>
+            <div class="recap">
               <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
               <p>E-Mail: <i data-from="student-email"></i></p>
               <p>Passwort: <i class="student-password">********</i></p>
@@ -154,7 +154,7 @@
         <p>Ihr Kind kann sich nun in der Schul-Cloud einloggen.</p>
 
         <div class="print">
-          <div>
+          <div class="recap">
             <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
             <p>E-Mail: <i data-from="student-email"></i></p>
             <p>Passwort: <i class="student-password">********</i></p>
