--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -13,7 +13,7 @@
                         <button class="sc-card-menu-action {{this.class}}"
                            
                            target="_blank"
-                           data-method="delete-material"
+                           data-method="DELETE"
                            data-name="{{../title}}"
                            alt="'{{../title}}' löschen">
                             <i class="fa fa-{{this.icon}}"></i>
