--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -51,7 +51,7 @@
                                         <a class="delete-material"
                                            href="materials/{{../_id}}"
                                            target="_blank"
-                                           data-method="delete-material"
+                                           data-method="DELETE"
                                            data-name="{{../title}}">
                                             <i class="fa fa-trash-o"></i>
                                         </a>
