--- a/views/administration/dataprivacy/registration-student.hbs
+++ b/views/administration/dataprivacy/registration-student.hbs
@@ -94,7 +94,7 @@
         <h4>Abschluss</h4>
         <p>Fast geschafft! Mit folgenden Daten kannst du dich in der Schul-Cloud anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.
           <div class="print">
-            <div>
+            <div class="recap">
               <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
               <p>E-Mail: <i data-from="student-email"></i></p>
               <p>Passwort: <i class="student-password">********</i></p>
@@ -120,7 +120,7 @@
         <p>Ihr Kind kann sich nun in der Schul-Cloud einloggen.</p>
 
         <div class="print">
-          <div>
+          <div class="recap">
             <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
             <p>E-Mail: <i data-from="student-email"></i></p>
             <p>Passwort: <i class="student-password">********</i></p>
