--- a/views/courses/courseGroup.hbs
+++ b/views/courses/courseGroup.hbs
@@ -49,7 +49,7 @@
                                         <p class="topic-label ml-1">{{this.name}}</p>
                                     
                                         <div class="right-btn-group">
-                                            <a class="delete-topic btn btn-sm" href="/courses/{{../courseId}}/topics/{{_id}}?courseGroup={{../_id}}" target="_blank" data-method="delete-material"
+                                            <a class="delete-topic btn btn-sm" href="/courses/{{../courseId}}/topics/{{_id}}?courseGroup={{../_id}}" target="_blank" data-method="DELETE"
                                                 data-name="{{this.name}}" redirect="/courses/{{../courseId}}/groups/{{../_id}}">
                                                 <i class="fa fa-trash-o"></i>
                                             </a>
@@ -114,7 +114,7 @@
         <div class="row padding-top">
             <div class="col-sm-12 col-md-12">
                 <a href="/courses/{{courseId}}/groups/{{_id}}/edit" class="btn btn-add btn-primary">Schülergruppe bearbeiten</a>
-                <a href="/courses/{{courseId}}/groups/{{_id}}" class="btn btn-delete-course btn-secondary" target="_blank" data-method="delete-material"
+                <a href="/courses/{{courseId}}/groups/{{_id}}" class="btn btn-delete-course btn-secondary" target="_blank" data-method="DELETE"
                     data-name="{{../name}}" redirect="/courses/{{courseId}}">Schülergruppe löschen</a>
             </div>
         </div>
