--- a/views/homework/extended.hbs
+++ b/views/homework/extended.hbs
@@ -26,7 +26,7 @@
                href="/homework/{{../_id}}"
                redirect="/homework"
                target="_blank"
-               data-method="delete-material"
+               data-method="DELETE"
                data-name="{{../title}}"
                alt="Löschen der Aufgabe: '{{../title}}'.">
                 Löschen
@@ -40,7 +40,7 @@
                    href="/homework/{{../_id}}"
                    redirect="/homework"
                    target="_blank"
-                   data-method="delete-material"
+                   data-method="DELETE"
                    data-name="{{../title}}"
                    alt="Löschen der Aufgabe: '{{../title}}'.">
                     Löschen
