--- a/views/news/article.hbs
+++ b/views/news/article.hbs
@@ -14,7 +14,7 @@
                 <a class="btn btn-primary btn-edit" href="/news/{{../news._id}}/edit" alt="Artikel '{{../news.title}}' bearbeiten.">
                     Bearbeiten
                 </a>
-                <a class="btn btn-secondary btn-delete" href="/news/{{../news._id}}" target="_blank" data-method="delete-material" data-name="{{../news.title}}" alt="Artikel '{{../news.title}}' löschen" redirect="/news/">
+                <a class="btn btn-secondary btn-delete" href="/news/{{../news._id}}" target="_blank" data-method="DELETE" data-name="{{../news.title}}" alt="Artikel '{{../news.title}}' löschen" redirect="/news/">
                     Löschen
                 </a>
             </div>
