--- a/views/classes/create.hbs
+++ b/views/classes/create.hbs
@@ -10,8 +10,8 @@
     {{/content}}
 
     {{#content "page"}}
-        <section class="section-classes">
-            <form class="modal-form" method="post" action="">
+        <section class="section-classes-create">
+            <form class="create-form" method="post" action="">
                 {{> "administration/forms/form-classes-create"}}
             </form>
         </section>
