lots of small things

--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -74,10 +74,10 @@
 
         <div class="form-group">
             <label>Ihre E-Mail Adresse *</label>
-            <input class="form-control" type="email" name="parent-email" required placeholder="elter@schul-cloud.org"></input>
+            <input class="form-control" type="email" name="parent-email" required placeholder="eltern@schul-cloud.org"></input>
         </div>
         <p>Wir benötigen eine E-Mail-Adresse, damit Ihre Einwilligung in die Nutzung der Schul-Cloud rechtlich gültig ist. Die Schul-Cloud gibt die Adresse nicht weiter. Sie erhalten keine unerwünschten Mails.</p>
-        <p>Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie der Klassenlehrer kontaktieren kann und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.</p>
+        <p>Zusätzlich planen wir die Entwicklung eines Eltern-Zugangs, über den Sie mit dem Klassenlehrer kommunizieren und mit dem Sie die Lernfortschritte Ihres Kindes nachvollziehen können. Sobald diese Funktionen zur Verfügung stehen, fragen wir Sie, ob wir Ihre E-Mail-Adresse dafür verwenden dürfen.</p>
       </section>
 
 
@@ -122,32 +122,38 @@
 
 
 
-      <section data-panel="section-4" class="submit-page">
-        <h4>Abschluss</h4>
-        <p>Fast geschafft!</p>
-        <p>Mit folgenden Daten kann sich
-          <b data-from="student-firstname"></b>
-          <b data-from="student-secondname"></b> 
-        in der Schul-Cloud anmelden. Bitte bewahren Sie die Anmeldedaten auf.
-          <div class="print">
-            <div class="recap">
-              <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
-              <p>E-Mail: <i data-from="student-email"></i></p>
-              <p>Passwort: <i class="student-password">********</i></p>
-            </div>
-             <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
-              <i class="fa fa-print"></i> Drucken
-            </div>
-          </div>
-        </p>
+	  <section data-panel="section-4" class="submit-page">
+		  <h4>Abschluss</h4>
+		  <p>Fast geschafft!</p>
+		  <p>Wir habe soeben eine E-Mail an Ihre angegebene Adresse gesendet. Bitte geben Sie den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
+		  <p>PIN: [ ] [ ] [ ] [ ]</p>
+		  <p><a href="#">Code erneut senden</a></p>
+          <p><a href="#" class="pincorrect">Restdaten anzeigen wenn PIN korrekt</a></p>
+		  <div id="userdata-summary" class="hidden">
+			  <p>
+				  Mit folgenden Daten kann sich
+				  <b data-from="student-firstname"></b>
+				  <b data-from="student-secondname"></b>
+				  in der Schul-Cloud anmelden. Bitte bewahren Sie die Anmeldedaten auf.
+				  <div class="print">
+					  <div class="recap">
+						  <p>Nutzername: <i data-from="student-firstname"></i>.<i data-from="student-secondname"></i></p>
+						  <p>E-Mail: <i data-from="student-email"></i></p>
+						  <p>Passwort: <i class="student-password">********</i></p>
+					  </div>
+					  <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
+						  <i class="fa fa-print"></i> Drucken
+					  </div>
+                </div>
+			  </p>
 
-        <label>
-            <input name="sendCredentials" type="checkbox" value="sendCredentials"/>
-            Login-Daten per E-Mail an angegebene Adressen senden
-        </label>
-        <p>
-Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
-      </section>
+				<label>
+					<input name="sendCredentials" type="checkbox" value="sendCredentials" />
+					Login-Daten per E-Mail an angegebene Adressen senden
+				</label>
+				<p>Beim ersten Login muss ein neues Passwort gewählt werden. Schüler ab 14 Jahren müssen beim ersten Login die Einwilligungserklärungen zusätzlich selbst bestätigen.</p>
+		  </div>
+	  </section>
 
 
 
