--- a/views/administration/dataprivacy/registration-student.hbs
+++ b/views/administration/dataprivacy/registration-student.hbs
@@ -41,7 +41,7 @@
         <div class="row">
           <div class="form-group col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <Label>Geschlecht: *</Label>
-            <select class="form-control form-control-lg" type="text" name="gender">
+            <select class="form-control form-control-lg" type="text" name="gender" required>
               <option value="">Bitte Geschlecht auswählen</option>
               <option value="male">männlich</option>
               <option value="female">weiblich</option>
