--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -23,7 +23,7 @@
                     <section>
                         <div class="section-title mb-2"><h4>Meine Vertretungen</h4></div>
                         {{#if ../substitutionCourses}}
-                            {{> 'dashboard/components/card_section' section-id="substitutionCourses" title="" content=../substitutionCourses link-text="Öffnen"}}
+                            {{> 'dashboard/components/card_section' section-id="substitutionCourses" title="" content=../substitutionCourses link-text="Öffnen" additionalInfoName="memberCount"}}
                         {{else}}
                             <div class="col-xs-12">
                                 <p class="text-muted text-center">
