stash small stuff

--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -29,7 +29,7 @@
 
         <div class="form-group">
           <label>Geburtsdatum des Schülers: *</label>
-          <input class="form-control linked" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="student-birthdate" type="text" data-from="student-birthdate" required/>
+          <input class="form-control linked" data-date data-min-date="1990/01/01" data-max-date="2015/01/01" data-start-date="2000/01/01" name="student-birthdate" type="text" data-from="student-birthdate" autocomplete="off" required/>
         </div>
 
         <div class="form-group">
@@ -51,7 +51,7 @@
             </select>
           </div>
         </div>
-        <p>Erhebung erfolgt für Forschung und Optimierung</p>
+        <p>Erhebung erfolgt für Forschung und Optimierung.</p>
       </section>
 
 
@@ -86,10 +86,7 @@
         <h4>Einwilligung</h4>
         <p>Einwilligungserklärung</p>
         <p>Bitte bestätigen Sie folgende Einwilligungserklärungen, damit Ihr Kind die Vorteile der Schul-Cloud nutzen kann:</p>
-        <p>Ich, 
-          <b data-from="parent-firstname"></b>
-          <b data-from="parent-secondname"></b>
-        , bin erziehungsberechtigt für 
+        <p>Ich, <b data-from="parent-firstname"></b> <b data-from="parent-secondname"></b>, bin erziehungsberechtigt für
           <b data-from="student-firstname"></b>
           <b data-from="student-secondname"></b> 
         und erkläre Folgendes:</p>
