--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -34,7 +34,8 @@
 
         <div class="form-group">
             <label>E-Mail Adresse des Schülers *</label>
-            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" required></input>
+            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" pattern=".+@globex.com" required />
+            <span class="mailinfo"></span>
         </div>
         <p>
           Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
