Extract react vendor bundle, use bundle in edit topics

--- a/views/topic/edit-topic.hbs
+++ b/views/topic/edit-topic.hbs
@@ -1,9 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/vendor/react/react.min.js" defer></script>
-        <script src="/vendor/react/react-dom.min.js" defer></script>
-        <script src="/vendor/react/react-sortable-hoc.js" defer></script>
+        <script src="/scripts/vendor-react.js" defer></script>
         <script src="/vendor/ckeditor/ckeditor.js" defer></script>
         <script src="/scripts/topicEdit.js" defer></script>
         <script src="/scripts/courses.js" defer></script>
