--- a/views/schics/schic.hbs
+++ b/views/schics/schic.hbs
@@ -1,7 +1,7 @@
 {{#extend "lib/loggedin"}}
 
     {{#content "scripts" mode="append"}}
-        <script src="/scripts/vendors.js" defer></script>
+        <script src="/scripts/vendor-react.js" defer></script>
         <script src="/scripts/schics/schicEdit.js" defer></script>
     {{/content}}
 
