mail pattern in ui and form validation test

--- a/views/administration/dataprivacy/registration-parent.hbs
+++ b/views/administration/dataprivacy/registration-parent.hbs
@@ -34,7 +34,7 @@
 
         <div class="form-group">
             <label>E-Mail Adresse des Schülers *</label>
-            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" pattern=".+@globex.com" required />
+            <input class="form-control linked" type="email" name="student-email" placeholder="schueler@schul-cloud.org" data-pattern="*@test.de" pattern=".+@test.de" required />
             <span class="mailinfo"></span>
         </div>
         <p>
