add ui and button

--- a/views/courses/course.hbs
+++ b/views/courses/course.hbs
@@ -261,6 +261,7 @@
                 <div class="col-sm-12">
                     {{#userHasPermission "COURSE_EDIT"}}
                         <a href="/courses/{{../_id}}/edit" class="btn btn-add btn-primary">Kurs bearbeiten</a>
+                        <a href="/courses/{{../_id}}/copy" class="btn btn-add btn-secondary">Kurs klonen</a>
                         <a href="/courses/{{../_id}}/"
                            class="btn btn-delete-course btn-secondary"
                            target="_blank"
